Migrating to gradle based on previous PR